# macmoji

./: .gitignore  README.md  pyproject.toml
macmoji/: __main__.py  base-emoji-font.ttc  config.py  converter.py  font.py  inserter.py  main.py  utils.py
macmoji/cli/: create.py  main.py
macmoji/tui/: create.py  main.py
tests/: test_cli.py
