[tool.poetry]
name = "macmoji"
version = "0.1.0"
description = "Create custom emoji fonts for macOS."
authors = ["Gustav Odinger <65498475+gustavwilliam@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.9.0"}

[tool.poetry.scripts]
macmoji = "macmoji.__main__:app"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
