[tool.poetry]
name = "macmoji"
version = "0.1.0"
description = "Create custom emoji fonts for macOS."
authors = ["Gustav Odinger <65498475+gustavwilliam@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.9.0"}
cairosvg = "^2.7.0"
pillow = "^10.0.0"
fonttools = "^4.40.0"
afdko = "^3.9.6"
humanize = "^4.7.0"

[tool.poetry.scripts]
macmoji = "macmoji.__main__:app"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
